# backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 07b2ff2691f6_optional_projects.py  2eba475f416b_projects_to_show_to_int.py  3adb4ba4476d_change_achievements_to_list.py  46ec4000378f_social_networks_change.py  59f4628e0ce2_.py  6b2c3e6d3224_.py  8460f7e14493_.py  90c03f7e3449_advancements.py  9a45c77bdaac_cascade_delete.py
src/: __main__.py  settings.py
src/database/: __init__.py  db.py  types.py
src/services/achievements/: app.py  dto.py
src/services/files/: app.py
src/services/login/: app.py  dependencies.py  dto.py
src/services/projects/: app.py  dto.py
src/services/users/: app.py  dto.py
src/services/utils/: app.py  dto.py
src/utils/: __init__.py  crypto.py  strings.py
tests/: conftest.py  test_achievements.py  test_login.py  test_projects.py  test_users.py  test_utils.py
